# travel-planner-india

./: .env.example  .gitignore  README.md  package.json  plan.md  pyproject.toml  requirements.txt  run-all.sh  stop-all.sh
app/: __init__.py  config.py  database.py  init_db.py  main.py
app/api/: airports.py  cities.py  routes.py  schemas.py  search.py  stations.py
app/models/: __init__.py  airport.py  city.py  route.py  station.py  transfer_time.py
app/routing/: __init__.py  connection_scan.py
app/scrapers/: __init__.py  base.py  flight_scraper.py  station_scraper.py  train_scraper.py
app/services/: __init__.py  connection_risk.py  data_importers.py  geospatial.py  journey_planner.py
data/seeds/: buses.json  cities_extra.json  flights.json  popular_pairs.json  trains.json  transfer_times.json
docs/: DATA_SOURCES_FEASIBILITY.md  IXIGO_API_ANALYSIS.md  RAILRADAR_API.md  REDBUS_API_ANALYSIS.md  RESEARCH.md  ROADMAP.md  plan.md  research.md  travel-planner-india.md
docs/steps/: 01-project-setup-infrastructure.md  02-database-schema-design.md  03-authentication-framework.md  04-core-api-layer.md  05-frontend-application-setup.md  06-auth-ui-session-management.md  08-core-business-logic.md  (+8 more)
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: ixigo.sh  ixigo_flights_harvester.py  railradar_harvester.py  redbus.sh  redbus_autocomplete.sh  redbus_harvester.py  sync_data.py  test_aviationstack.py  test_bus_data.py  test_geospatial.py  test_system.py  test_train_data.py
tests/: __init__.py  test_api.py  test_routing.py
(+27 files in other folders)
