[project]
name = "travel-planner-india"
version = "0.1.0"
description = "Multi-modal journey planner for India (flights + trains + buses + last-mile)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Chiranjeet" }]
license = { text = "MIT" }

dependencies = [
    # Core
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",
    # Database
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    # Scraping
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "playwright==1.48.0",
    "lxml==5.3.0",
    # Data processing
    "pandas==2.2.3",
    "numpy==2.2.0",
    # Routing / graph
    "networkx==3.4.2",
    "geopy==2.4.1",
    # HTTP client
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "black==24.10.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
managed = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
